# dumb-driver

./: Cargo.toml  Makefile.toml  build.rs  install_driver.bat  rust-toolchain  windows_driver_test.inf  x86_64-kernel-windows-msvc.json
.cargo/: config
src/: lib.rs
