[package]
name = "windows-driver-test"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.utf16_lit]
git = "https://github.com/Lokathor/utf16_lit"
branch = "main"

[dependencies.winapi]
#git = "https://github.com/roblabla/winapi-rs"
#branch = "feature/km"
path = "../winapi-rs"
features = [
    "fltkernel",
    "ntstatus",
]

[target.'cfg(windows)'.build-dependencies]
winreg = "0.7.0"